adding some plugins

--- a/.config/ranger/rc.conf
+++ b/.config/ranger/rc.conf
@@ -1,15 +1,16 @@
 ## Options
-set column_ratios 2,2,4
+set column_ratios 2,3,5
 set hidden_filter ^\.|\.(?:pyc|pyo|bak|swp)$|^lost\+found$|^__(py)?cache__$
 set show_hidden false
 set confirm_on_delete multiple
 set use_preview_script true
+set preview_script pistol
 set open_all_images true
 set vcs_aware false
 set vcs_backend_git disabled
 set vcs_backend_hg disabled
 set vcs_backend_bzr disabled
-set preview_images false
+set preview_images true
 set preview_images_method urxvt
 set unicode_ellipsis false
 set show_hidden_bookmarks true
