--- a/.config/termite/config
+++ b/.config/termite/config
@@ -43,40 +43,25 @@ cursor_shape = ibeam
 #===============================================================
 
 [colors]
-foreground_bold = #d0d6e0
-cursor_foreground = #C4C7C5
-foreground = #C4C7C5
+cursor = #fad000
+foreground = #ffffff
 background = rgba(30, 40, 54, 0.85)
-cursor = #afbfbf
-
-#black
-color0 = #263640
-color8 = #4a697d
-
-#red
-color1 = #EC7875
-color9 = #FB8784
-
-#green
-color2 = #61C766
-color10 = #70D675
-
-#yellow
-color3 = #FDD835
-color11 = #FFE744
-
-#blue
-color4 = #42A5F5
-color12 = #51B4FF
-
-#magenta
-color5 = #BA68C8
-color13 = #C979D7
-
-#cyan
-color6 = #4DD0E1
-color14 = #5CDFF0
-
-#white
-color7 = #bfbaac
-color14 = #5CDFF0
+color0 = #000000
+color1 = #d90429
+color2 = #3ad900
+color3 = #ffe700
+color4 = #6943ff
+color5 = #ff2c70
+color6 = #00c5c7
+color7 = #c7c7c7
+color8 = #686868
+color9 = #f92a1c
+color10 = #43d426
+color11 = #f1d000
+color12 = #6871ff
+color13 = #ff77ff
+color14 = #79e8fb
+color15 = #ffffff
+colorBD = #f9fdff
+colorIT =
+colorUL =
