--- a/.config/i3lock-fancier/config.ini
+++ b/.config/i3lock-fancier/config.ini
@@ -43,11 +43,11 @@ tile					= 0
 ; String to be shown while verifying the password
 ; Possible values: any string
 ; Default value: verifying...
-verif_text 				= Verifing...
+verif_text 				= ?????
 ; String to be shown upon entering an incorrect password
 ; Possible values: any string
 ; Default value: wrong!
-wrong_text 				= Wrong!
+wrong_text 				= XXXXX 
 
 ; Font size of the status text
 ; Possible values: floats
@@ -58,7 +58,7 @@ text_size 				= 24.0
 ; Never saw it working, lol.
 ; Possible values: floats
 ; Default value: 14.0
-modifier_size 			= 14.0
+modifier_size 			= 10.0
 
 ; [unlock] section configures behaviour of unlock indicator
 [unlock]
@@ -80,8 +80,8 @@ always_show_indicator	= 1
 ; Default values:
 ; x + (w / 2)
 ; y + (h / 2)
-unlock_x_expr 			= x + (w / 2)
-unlock_y_expr 			= y + (h / 2)
+unlock_x_expr 			=  (w / 2)
+unlock_y_expr 			=  (h / 2)
 
 ; Radius of unlock incicator circle
 ; Possible values: floats
