fonts and customizing the polybar

--- a/.config/gtk-2.0/gtkfilechooser.ini
+++ b/.config/gtk-2.0/gtkfilechooser.ini
@@ -1,9 +1,9 @@
 [Filechooser Settings]
 LocationMode=path-bar
-ShowHidden=false
+ShowHidden=true
 ShowSizeColumn=true
-GeometryX=323
-GeometryY=141
+GeometryX=0
+GeometryY=54
 GeometryWidth=720
 GeometryHeight=540
 SortColumn=name
