--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -166,11 +166,10 @@ scroll-down = path_to_script
 
 [module/sep]
 type = custom/text
-content = |
-
-;;content-background = #000
+content = 
+content-background = ${color.bg}
 content-foreground = ${color.bg-alt}
-;;content-padding = 4
+;;content-padding = 
 
 [module/sep2]
 type = custom/text
@@ -229,10 +228,10 @@ menu-0-1-exec = systemctl poweroff
 
 ;;format = <label-toggle> <menu>
 ;;format-prefix = ${menu.icon-menu}
-format-spacing = 1 
+format-spacing = 3 
 
-label-open = 
-label-close = 
+label-open = 
+label-close = 
 
 
 ; Optional item separator
@@ -296,7 +295,7 @@ interval = 1
 format-prefix = " "
 format = <label>
 exec = python3 ~/.config/polybar/scripts/polybar-spotify/spotify_status.py -f '{song} - {artist}' -q
-format-underline = #1db954
+format-underline = #009966
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
 ;;	   / ____/ __ \/ ____/
