--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -48,6 +48,8 @@ glx-copy-from-front = false;
 # Defaults to undefined.
 #glx-swap-method = "undefined";
 
+
+
 #################################
 #
 # Shadows
@@ -55,7 +57,7 @@ glx-copy-from-front = false;
 #################################
 
 # Enabled client-side shadows on windows.
-shadow = true;
+shadow = false;
 # The blur radius for shadows. (default 12)
 shadow-radius = 10;
 # The left offset for shadows. (default -15)
@@ -74,6 +76,7 @@ shadow-opacity = 0.5;
 # (most applications are fine, only apps that do weird things with xshapes or argb are affected).
 # This list includes all the affected apps I found in my testing. The "! name~=''" part excludes shadows on any "Unknown" windows, this prevents a visual glitch with the XFWM alt tab switcher.
 shadow-exclude = [
+    "class_g = 'Polybar' && argb", 
     "name = 'Notification'",
     "name = 'Plank'",
     "name = 'Docky'",
@@ -191,6 +194,16 @@ detect-transient = true;
 # Use WM_CLIENT_LEADER to group windows, and consider windows in the same group focused at the same time.
 # WM_TRANSIENT_FOR has higher priority if --detect-transient is enabled, too.
 detect-client-leader = true;
+
+corner-radius = 14.0;
+rounded-corners-exclude = [
+  #"window_type = 'normal'",
+  "class_g = 'colorpicker'",
+  "class_g = 'XTerm'",
+  "class_g = 'Polybar'",
+  "class_g = 'code-oss'",
+  #"class_g = 'TelegramDesktop'",
+];
 
 #################################
 #
