--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -18,6 +18,7 @@
 ; Used for top aligned bars
 margin-bottom = 0
 
+
 ; Adjust the _NET_WM_STRUT_PARTIAL bottom value
 ; Used for bottom aligned bars
 margin-top = 0
@@ -64,15 +65,15 @@ fixed-center = true
 ; Dimension defined as pixel value (e.g. 35) or percentage (e.g. 50%),
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in a width or height of 50% minus 10 pixels
-width = 100%
+width = 100%:-18
 height = 28
 
 ; Offset defined as pixel value (e.g. 35) or percentage (e.g. 50%)
 ; the percentage can optionally be extended with a pixel offset like so:
 ; 50%:-10, this will result in an offset in the x or y direction 
 ; of 50% minus 10 pixels
-offset-x = 0
-offset-y = 0
+offset-x = 9
+offset-y = 3
 
 ; Background ARGB color (e.g. #f00, #ff992a, #ddff1023)
 background = ${color.bg}
@@ -89,15 +90,15 @@ foreground = ${color.fg}
 ; doesn't get rounded
 ; Individual top/bottom values can be defined using:
 ;   radius-{top,bottom}
-radius-top = 0.0
-radius-bottom = 0.0
+radius-top = 14.0
+radius-bottom = 14.0
 
 ; Under-/overline pixel size and argb color
 ; Individual values can be defined using:
 ;   {overline,underline}-size
 ;   {overline,underline}-color
-line-size = 2
-line-color = ${color.ac}
+;line-size = 0
+; line-color = ${color.ac}
 
 ; Values applied to all borders
 ; Individual side values can be defined using:
@@ -110,8 +111,8 @@ line-color = ${color.ac}
 ; the border is placed withing this area. So you effectively only have the
 ; following horizontal space on the bar:
 ;   width - border-right-size - border-left-size
-border-bottom-size = 0
-border-color = ${color.ac}
+;border-bottom-size = 0
+;border-color = ${color.ac}
 
 ; Number of spaces to add at the beginning/end of the bar
 ; Individual side values can be defined using:
@@ -122,18 +123,18 @@ padding = 2
 ; Individual side values can be defined using:
 ;   module-margin-{left,right}
 module-margin-left = 1
-module-margin-right = 1
+module-margin-right = 0
 
 ; Fonts are defined using <font-name>;<vertical-offset>
 ; Font names are specified using a fontconfig pattern.
 ;   font-0 = NotoSans-Regular:size=8;2
-;   font-1 = MaterialIcons:size=10
+;  font-1 = MaterialIcons:size=10
 ;   font-2 = Termsynu:size=8;-1
 ;   font-3 = FontAwesome:size=10
 ; See the Fonts wiki page for more details
 
-font-0 = "DejaVuSans-Mono:size=8;2"
-font-1 = "waffle:size=12;2"
+font-0 = "DejaVuSans-Mono:size=9;2"
+font-1 = "DejaVuSansMono Nerd Font:size=9;2"
 
 ; Modules are added to one of the available blocks
 ;   modules-left = cpu ram
@@ -154,23 +155,23 @@ font-1 = "waffle:size=12;2"
 ;; User modules
 ;checknetwork updates window_switch launcher powermenu sysmenu menu
 ;;
-;; Bars
+;; Barigh
 ;cpu_bar memory_bar filesystem_bar mpd_bar 
 ;volume brightness battery_bar 
 
-modules-left = openbox sep2 updates sep2 cpu temperature memory filesystem
-modules-center =  date spotify
-modules-right = battery network sep volume brightness sep2 powermenu
+modules-left = openbox sep battery cpu temperature memory filesystem
+modules-center = date 
+modules-right = spotify network sep pulseaudio backlight sep powermenu
 
 ; The separator will be inserted between the output of each module
-separator =
+separator = 
 
 ; This value is used to add extra spacing between elements
 ; @deprecated: This parameter will be removed in an upcoming version
 spacing = 0
 
 ; Opacity value between 0.0 and 1.0 used on fade in/out
-dim-value = 1.0
+dim-value = 1
 
 ; Value to be used to set the WM_NAME atom
 ; If the value is empty or undefined, the atom value
@@ -195,7 +196,7 @@ tray-position = none
 
 ; If true, the bar will not shift its
 ; contents when the tray changes
-tray-detached = false
+tray-detached = true
 
 ; Tray icon max size
 tray-maxsize = 16
@@ -320,7 +321,7 @@ format-offset =
 
 ; Enables pseudo-transparency for the bar
 ; If set to true the bar can be transparent without a compositor.
-pseudo-transparency = false
+pseudo-transparency = true
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
