--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -70,7 +70,7 @@ label-volume = %percentage%%
 ; Available tokens:
 ;   %percentage% (default
 format-muted-prefix = 
-label-muted = " Muted"
+label-muted = " MUTED"
 label-muted-foreground = ${color.ac}
 
 ; Only applies if <ramp-volume> is used
@@ -109,11 +109,13 @@ label = %percentage%%
 
 ; Only applies if <ramp> is used
 
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
+ramp-0 = 
+ramp-1 = 
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
+ramp-5 = 
+ramp-6 = 
 ramp-foreground = ${color.teal}
 
 ;; Other Icons
@@ -173,7 +175,7 @@ format-discharging = <ramp-capacity> <label-discharging>
 ;   <bar-capacity>
 ;   <ramp-capacity>
 format-full = <label-full>
-format-full-prefix = " "
+format-full-prefix = ""
 format-full-prefix-foreground = ${color.red}
 ; Available tokens:
 ;   %percentage% (default)
@@ -193,27 +195,32 @@ label-discharging = %percentage%%
 label-full = %percentage%%
 
 ; Only applies if <ramp-capacity> is used
-ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+ramp-capacity-0 =  
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+ramp-capacity-5 = 
+ramp-capacity-6 = 
+ramp-capacity-7 = 
+ramp-capacity-8 =  
 ramp-capacity-foreground = ${color.amber}
 
 ; Only applies if <bar-capacity> is used
 ;bar-capacity-width = 10
 
 ; Only applies if <animation-charging> is used
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-5 = 
+animation-charging-0 = 
+animation-charging-1 =  
+animation-charging-2 =  
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-5 = 
+animation-charging-6 = 
 animation-charging-foreground = ${color.green}
 
 ; Framerate in milliseconds
-animation-charging-framerate = 750
+animation-charging-framerate = 500
 
 ; Only applies if <animation-discharging> is used
 ;;animation-discharging-0 = 
@@ -375,8 +382,8 @@ interval = 0.5
 ;   <ramp-coreload>
 ;;format = <label> <ramp-coreload>
 format = <label>
-format-prefix = 
-format-prefix-foreground = ${color.yellow}
+format-prefix = 
+format-prefix-foreground = ${color.grey}
 
 ; Available tokens:
 ;   %percentage% (default) - total cpu load averaged over all cores
@@ -422,7 +429,7 @@ time-alt = , %k:%M:%S
 ; Available tags:
 ;   <label> (default)
 format = <label>
-format-prefix = " "
+format-prefix = "   "
 format-prefix-foreground = ${color.red}
 
 ; Available tokens:
@@ -459,14 +466,14 @@ fixed-values = true
 ;   <bar-used>
 ;   <ramp-capacity>
 format-mounted = <label-mounted>
-format-mounted-prefix = 
-format-mounted-prefix-foreground = ${color.orange}
+format-mounted-prefix =  
+format-mounted-prefix-foreground = ${color.green}
 
 ; Available tags:
 ;   <label-unmounted> (default)
 format-unmounted = <label-unmounted>
-format-unmounted-prefix = 
-format-unmounted-prefix-foreground = ${color.orange}
+format-unmounted-prefix = 
+format-unmounted-prefix-foreground = ${color.red}
 
 ; Available tokens:
 ;   %mountpoint%
@@ -478,7 +485,7 @@ format-unmounted-prefix-foreground = ${color.orange}
 ;   %free%
 ;   %used%
 ; Default: %mountpoint% %percentage_free%%
-label-mounted = " %free%"
+label-mounted = " %percentage_used%%"
 
 ; Available tokens:
 ;   %mountpoint%
@@ -646,7 +653,7 @@ interval = 3
 ;   <ramp-swap-used>
 ;   <ramp-swap-free>
 format = <label>
-format-prefix = 
+format-prefix = 
 format-prefix-foreground = ${color.blue}
 
 ; Available tokens:
@@ -667,7 +674,7 @@ format-prefix-foreground = ${color.blue}
 ;   %gb_swap_free%
 ;   %gb_swap_used%
 
-label = " %mb_used%"
+label = " %percentage_used%%"
 
 ; Only applies if <bar-used> is used
 ;;bar-used-indicator =
@@ -840,7 +847,7 @@ format-connected = <ramp-signal> <label-connected>
 ; Available tags:
 ;   <label-disconnected> (default)
 format-disconnected = <label-disconnected>
-format-disconnected-prefix = " "
+format-disconnected-prefix = " "
 format-disconnected-prefix-foreground = ${color.red}
 
 ; Available tags:
@@ -859,7 +866,7 @@ format-disconnected-prefix-foreground = ${color.red}
 ;   %downspeed% [wireless+wired]
 ;   %linkspeed% [wired]
 ; Default: %ifname% %local_ip%
-label-connected = "%essid%  %downspeed%"
+label-connected = "%downspeed% %upspeed%"
 ;;label-connected-foreground = #eefafafa
 
 ; Available tokens:
@@ -882,11 +889,7 @@ label-disconnected = Disconnected
 ;label-packetloss-foreground = #eefafafa
 
 ; Only applies if <ramp-signal> is used
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
+ramp-signal-0 ="﮴﮵"
 ramp-signal-foreground = ${color.purple}
 
 ; Only applies if <animation-packetloss> is used
@@ -904,7 +907,7 @@ type = internal/pulseaudio
 
 ; Sink to be used, if it exists (find using `pacmd list-sinks`, name field)
 ; If not, uses default sink
-sink = alsa_output.pci-0000_12_00.3.analog-stereo
+sink = alsa_output.pci-0000_00_1b.0.analog-stereo
 
 ; Use PA_VOLUME_UI_MAX (~153%) if true, or PA_VOLUME_NORM (100%) if false
 ; Default: true
@@ -932,16 +935,16 @@ format-volume = <ramp-volume> <label-volume>
 
 ; Available tokens:
 ;   %percentage% (default)
-format-muted-prefix = 
-label-muted = " Muted"
-label-muted-foreground = ${color.ac}
+format-muted-prefix = ﱝ
+format-muted-prefix-foreground=${color.red}
+label-muted = " MUTED"
+label-muted-foreground = ${color.white}
 
 ; Only applies if <ramp-volume> is used
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
-ramp-volume-4 = 
+ramp-volume-0 = 奄
+ramp-volume-1 = 奔
+ramp-volume-2 = 墳
+ramp-volume-3 = 
 ramp-volume-foreground = ${color.pink}
 
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
@@ -968,7 +971,7 @@ thermal-zone = 0
 
 ; Threshold temperature to display warning label (in degrees celsius)
 ; Default: 80
-warn-temperature = 60
+warn-temperature = 80
 
 ; Whether or not to show units next to the temperature tokens (°C, °F)
 ; Default: true
@@ -995,16 +998,16 @@ label = %temperature-c%
 ;   %temperature-c%   (default, temperature in °C)
 ;   %temperature-f%   (temperature in °F)
 label-warn = "%temperature-c%"
-label-warn-foreground = #f00
+label-warn-foreground = ${color.reshade1}
 
 ; Requires the <ramp> tag
 ; The icon selection will range from 0 to `warn-temperature`
 ; with the current temperature as index.
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-ramp-3 = 
-ramp-4 = 
+ramp-0 = 
+ramp-1 =  
+ramp-2 = 
+ramp-3 = 
+ramp-4 = 
 ramp-foreground = ${color.amber}
 ;;ramp-foreground = #55
 
@@ -1093,12 +1096,12 @@ enable-scroll = true
 ; NOTE: The desktop name needs to match the name configured by the WM
 ; You can get a list of the defined desktops using:
 ; $ xprop -root _NET_DESKTOP_NAMES
-icon-0 = 1;
-icon-1 = 2;
-icon-2 = 3;
-icon-3 = 4;
-icon-4 = 5;
-icon-default = 
+icon-0 = 1;   
+icon-1 = 2;   
+icon-2 = 3;   
+icon-3 = 4;   
+icon-4 = 5;   
+icon-default =    
 
 ; Available tags:
 ;   <label-monitor>
@@ -1111,14 +1114,14 @@ format-padding = 0
 ;   %name%
 ; Default: %name%
 label-monitor = %name%
-
+ 
 ; Available tokens:
 ;   %name%
 ;   %icon%
 ;   %index%
 ; Default: %icon%  %name%
-label-active = " "
-label-active-foreground = ${color.pink}
+label-active = "%icon% "
+label-active-foreground = ${color.teal}
 label-active-background = ${color.bg}
 ;;label-active-underline = ${color.ac}
 ;;label-active-overline = ${color.ac}
@@ -1156,7 +1159,7 @@ label-empty-background = ${color.bg}
 ;;label-empty-underline = ${color.ac}
 ;;label-empty-overline = ${color.ac}
 
-label-active-padding = 0
+label-active-padding = 0 
 label-urgent-padding = 0
 label-occupied-padding = 0
 label-empty-padding = 0
