--- a/.config/termite/config
+++ b/.config/termite/config
@@ -6,7 +6,7 @@ allow_bold = true
 #cell_width_scale = 1.0
 clickable_url = true
 dynamic_title = true
-font = DejaVu Sans Mono Book 10
+font = DejaVu Sans Mono Nerd Font 10
 #fullscreen = true
 #icon_name = terminal
 #mouse_autohide = false
