more theme and shortcuts

--- a/.config/polybar/bars.ini
+++ b/.config/polybar/bars.ini
@@ -7,7 +7,7 @@
 ;;	/_____/\__,_/_/  /____/  
 ;;
 ;; Created By Aditya Shakya @adi1090x
-;;
+;; Edited by Javier Tejdor @Javiertis
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/volume]
