--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -105,7 +105,7 @@ format = <ramp> <label>
 
 ; Available tokens:
 ;   %percentage% (default)
-label = %percentage%%
+label = " %percentage%%"
 
 ; Only applies if <ramp> is used
 
@@ -182,17 +182,17 @@ format-full-prefix-foreground = ${color.red}
 ;   %time%
 ;   %consumption% (shows current charge rate in watts)
 
-label-charging = %percentage%%
+label-charging = " %percentage%%"
 
 ; Available tokens:
 ;   %percentage% (default)
 ;   %time%
 ;   %consumption% (shows current discharge rate in watts)
-label-discharging = %percentage%%
+label-discharging = " %percentage%%"
 
 ; Available tokens:
 ;   %percentage% (default)
-label-full = %percentage%%
+label-full = " %percentage%%"
 
 ; Only applies if <ramp-capacity> is used
 ramp-capacity-0 =  
@@ -390,7 +390,7 @@ format-prefix-foreground = ${color.grey}
 ;   %percentage-sum% - Cumulative load on all cores
 ;   %percentage-cores% - load percentage for each core
 ;   %percentage-core[1-9]% - load percentage for specific core
-label = " %percentage%%"
+label = "  %percentage%%"
 
 ; Spacing between individual per-core ramps
 ;;ramp-coreload-spacing = 1
@@ -931,7 +931,7 @@ format-volume = <ramp-volume> <label-volume>
 
 ; Available tokens:
 ;   %percentage% (default)
-;label-volume = %percentage%%
+label-volume = " %percentage%%"
 
 ; Available tokens:
 ;   %percentage% (default)
@@ -991,13 +991,13 @@ format-warn = <ramp> <label-warn>
 ;   %temperature% (deprecated)
 ;   %temperature-c%   (default, temperature in °C)
 ;   %temperature-f%   (temperature in °F)
-label = %temperature-c%
+label = " %temperature-c%"
 
 ; Available tokens:
 ;   %temperature% (deprecated)
 ;   %temperature-c%   (default, temperature in °C)
 ;   %temperature-f%   (temperature in °F)
-label-warn = "%temperature-c%"
+label-warn = " %temperature-c%"
 label-warn-foreground = ${color.reshade1}
 
 ; Requires the <ramp> tag
