--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -7,7 +7,7 @@
 ;;	\____/____/\___/_/     /_/  /_/\____/\__,_/\__,_/_/\___/____/  
 ;; 
 ;; Created By Aditya Shakya @adi1090x
-;;
+;; Edited by Javier Tejedor @Javiertis
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/checknetwork]
@@ -291,11 +291,12 @@ label-separator-foreground = ${color.pink}
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 [module/spotify]
 type = custom/script
-interval = 1
-format-prefix = " "
+interval = 0.5
+format-prefix = ""
 format = <label>
-exec = python3 ~/.config/polybar/scripts/polybar-spotify/spotify_status.py -f '{song} - {artist}' -q
-format-underline = #009966
+format-prefix-foreground= #009966
+exec = python3 ~/.config/polybar/scripts/polybar-spotify/spotify_status.py -f '  {song} - {artist} ' -q
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
 ;;	   / ____/ __ \/ ____/
