--- a/.config/polybar/modules.ini
+++ b/.config/polybar/modules.ini
@@ -438,6 +438,8 @@ format-prefix-foreground = ${color.red}
 ; Default: %date%
 label = %date% %time%
 
+click-right=calcurse
+
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 
 [module/filesystem]
