--- a/.config/polybar/user_modules.ini
+++ b/.config/polybar/user_modules.ini
@@ -292,11 +292,12 @@ label-separator-foreground = ${color.pink}
 [module/spotify]
 type = custom/script
 interval = 0.5
-format-prefix = ""
+format-prefix = " "
 format = <label>
 format-prefix-foreground= #009966
-exec = python3 ~/.config/polybar/scripts/polybar-spotify/spotify_status.py -f '  {song} - {artist} ' -q
-
+exec = python3 ~/.config/polybar/scripts/polybar-spotify/spotify_status.py -f ' {song} - {artist} ' -q
+click-left = playerctl play-pause
+double-click-left = playerctl next
 ;; _-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_-_
 ;;	    __________  ______
 ;;	   / ____/ __ \/ ____/
