--- a/.config/picom.conf
+++ b/.config/picom.conf
@@ -104,18 +104,18 @@ shadow-ignore-shaped = false;
 # Opacity
 #
 #################################
-#
+
 #inactive-opacity = 0.85;
-#active-opacity = 0.95
-#frame-opacity = 1;
-inactive-opacity-override = false;
+#active-opacity = 0.85;
+#frame-opacity = 0.85;
+inactive-opacity-override = true;
 
 # Dim inactive windows. (0.0 - 1.0)
 # inactive-dim = 0.2;
 # Do not let dimness adjust based on window opacity.
 # inactive-dim-fixed = true;
 # Blur background of transparent windows. Bad performance with X Render backend. GLX backend is preferred.
-# blur-background = true;
+ #blur-background = true;
 # Blur background of opaque windows with transparent frames as well.
 # blur-background-frame = true;
 # Do not let blur radius adjust based on window opacity.
